# celeste-text-to-speech

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  example.py  pyproject.toml
src/celeste_text_to_speech/: __init__.py  mapping.py  voice_catalog.py  voice_registry.py
src/celeste_text_to_speech/core/: language.py  voice.py
src/celeste_text_to_speech/providers/: google.py
