[project]
name = "celeste-text-to-speech"
version = "0.1.0"
description = "Text-to-speech generation capabilities for Celeste"
requires-python = ">=3.13"
dependencies = [
    "celeste-core>=0.1.0",
    "pydantic>=2.11.7",
    "google-genai>=0.1.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.12.1",
]

[tool.uv.sources]
celeste-core = { git = "https://github.com/celeste-kai/celeste-core.git" }