[project]
name = "celeste-text-to-speech"
version = "0.1.0"
description = "Text-to-speech generation capabilities for Celeste"
requires-python = ">=3.13"
dependencies = [
    "celeste-core>=0.1.0",
    "pydantic>=2.11.7",
    "google-genai>=0.1.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.12.1",
]

[tool.uv.sources]
celeste-core = { git = "https://github.com/celeste-kai/celeste-core.git" }

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "ANN", "B", "C4", "T20"]
ignore = ["ANN401", "ANN101", "ANN102"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"